[gd_scene load_steps=15 format=2]

[ext_resource path="res://planet0.png" type="Texture" id=1]
[ext_resource path="res://planete/New Piskel(19) 2/New Piskel-6.png(1).png" type="Texture" id=2]
[ext_resource path="res://selector.gd" type="Script" id=3]
[ext_resource path="res://planete/New Piskel(19) 2/New Piskel-5.png(8).png" type="Texture" id=4]
[ext_resource path="res://ThaleahFat.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://planete/New Piskel(19) 2/sprite_2.png" type="Texture" id=6]
[ext_resource path="res://planete/New Piskel(19) 2/sprite_3.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.101961, 0.145098, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 253, 140 )
frames = SubResource( 6 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 118.0
margin_top = 115.0
margin_right = 182.0
margin_bottom = 163.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 321.0
margin_top = 115.0
margin_right = 385.0
margin_bottom = 163.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )

[node name="select" type="TextureButton" parent="."]
margin_left = 215.0
margin_top = 217.0
margin_right = 279.0
margin_bottom = 265.0
rect_scale = Vector2( 1.3, 1 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.146
anchor_bottom = 0.146
margin_left = 215.0
margin_top = 180.2
margin_right = 298.0
margin_bottom = 213.2
custom_fonts/font = SubResource( 7 )
text = "select"
align = 1
valign = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="select" to="." method="_on_select_pressed"]
